...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SignUp">

  <EditText
      android:id="@+id/phoneB"
      android:layout_width="180dp"
      android:layout_height="36dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="text"
      android:textSize="25dp"
...
      app:layout_constraintHorizontal_bias="0.917"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.166" />

  <EditText
      android:id="@+id/userB"
      android:layout_width="174dp"
      android:layout_height="30dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="text"
      android:text=""
...
      app:layout_constraintHorizontal_bias="0.115"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.416" />

  <EditText
      android:id="@+id/passwordB"
      android:layout_width="177dp"
      android:layout_height="32dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="textPassword"
      android:textSize="25dp"
...
      app:layout_constraintHorizontal_bias="0.077"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.696" />

  <EditText
      android:id="@+id/lastB"
      android:layout_width="182dp"
      android:layout_height="34dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="text"
      android:text=""
...
      app:layout_constraintHorizontal_bias="0.106"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.607" />

  <EditText
      android:id="@+id/firstB"
      android:layout_width="167dp"
      android:layout_height="30dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="text"
      android:text=""
...
      app:layout_constraintHorizontal_bias="0.076"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.28" />

  <EditText
      android:id="@+id/emailB"
      android:layout_width="183dp"
      android:layout_height="31dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="text"
      android:text=""
...
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.493" />


  <Button
      android:id="@+id/Create"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:text="Create"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
...
      app:layout_constraintHorizontal_bias="0.293"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.928" />

  <EditText
      android:id="@+id/confirmB"
      android:layout_width="189dp"
      android:layout_height="30dp"
      android:background="@color/white"
      android:ems="10"
      android:inputType="textPassword"
      android:textSize="25dp"
...
